--- a/.github/workflows/test-pr.yaml
+++ b/.github/workflows/test-pr.yaml
@@ -1,7 +1,9 @@
 name: "CI - Test Templates"
 on:
   pull_request:
-
+  push:
+    branches:
+      - main
 jobs:
   detect-changes:
     runs-on: ubuntu-latest
@@ -12,8 +14,7 @@ jobs:
         id: filter
         with:
           filters: |
-            color: ./**/color/**
-            hello: ./**/hello/**
+            nix-devenv: ./**/nix-devenv/**
 
   test:
     needs: [detect-changes]
@@ -23,7 +24,7 @@ jobs:
       matrix:
         templates: ${{ fromJSON(needs.detect-changes.outputs.templates) }}
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
       - name: Smoke test for '${{ matrix.templates }}'
         id: smoke_test
