--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -17,12 +17,12 @@ jobs:
         with:
           filters: |
             nix-devenv: ./**/nix-devenv/**
-
+       - run: ${{ steps.filter.outputs.changes }}
   test:
     needs: [detect-changes]
     runs-on: ubuntu-latest
     continue-on-error: true
-    if: ${{ needs.detect-changes.outputs.templates != '' }}
+    if: false
     strategy:
       matrix:
         templates: ${{ fromJSON(needs.detect-changes.outputs.templates) }}
