--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -24,7 +24,7 @@ jobs:
     if: ${{ join(needs.detect-changes.outputs) != '' }}
     steps:
       - uses: actions/checkout@v4
-      - run:  echo ${{ needs.detect-changes.outputs }}
+      - run:  echo ${{ toJSON(needs.detect-changes.outputs) }}
       # - name: Smoke test for '${{ matrix.templates }}'
       #   id: smoke_test
       #   uses: ./.github/actions/smoke-test
