--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -15,7 +15,7 @@ jobs:
     name: 'Nix Devenv | Draft Release'
     runs-on: ubuntu-22.04
     steps:
-      - uses: release-drafter/release-drafter
+      - uses: release-drafter/release-drafter@v6
         with:
           config-name: release-drafter-config-nix-devenv.yml
         env:
