--- a/src/nix-devenv/devcontainer-template.json
+++ b/src/nix-devenv/devcontainer-template.json
@@ -1,6 +1,6 @@
 {
     "id": "nix-devenv",
-    "version": "v1.0.3",
+    "version": "1.0.3",
     "name": "Nix Development Environment",
     "description": "A development environment with Nix",
     "publisher": "Bruno Paz",
