--- a/.github/release-drafter-config-nix-devenv.yml
+++ b/.github/release-drafter-config-nix-devenv.yml
@@ -6,7 +6,7 @@ include-paths:
 template: |
   ## What Changed 👀
   $CHANGES
-  **Full Changelog**: https://github.com/$OWNER/$REPOSITORY/compare/$PREVIOUS_TAG...v$RESOLVED_VERSION
+  **Full Changelog**: https://github.com/$OWNER/$REPOSITORY/compare/$PREVIOUS_TAG...$RESOLVED_VERSION
 categories:
   - title: 🚀 Features
     labels:
